--- a/SimpleWebShop/Views/Cars/CarsView.cshtml
+++ b/SimpleWebShop/Views/Cars/CarsView.cshtml
@@ -4,15 +4,9 @@
 
 <div class="row mt-5 mb-2">
     @{ 
-        foreach (var car in Model.allCars)
+        foreach (Car car in Model.allCars)
         {
-            <div class="col-lg-4">
-                <img class="img-thumbnail" src="@car.image" alt="@car.name" />
-                <h2>@car.name</h2>
-                <p>@car.shortDescription</p>
-                <p>Цена: @car.price.ToString("c")</p>
-                <p><a class="btn btn-warning" href="#">Подробнее</a></p>
-            </div>
+            @Html.Partial("AllCars", car)
         }
     }
 </div>
