Added shop Cart; Added HomePage

--- a/SimpleWebShop/Views/Shared/_Layout.cshtml
+++ b/SimpleWebShop/Views/Shared/_Layout.cshtml
@@ -24,6 +24,12 @@
                         <a class="nav-link" href="/Cars/CarsView">All Cars</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/Cars/CarsView/electro">Electro cars</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Cars/CarsView/fuel">Fuel cars</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/ShopCart/CartView">Cart</a>
                     </li>
                 </ul>
