Added auth function. Added sending mail

--- a/SimpleWebShop/Views/Shared/_Layout.cshtml
+++ b/SimpleWebShop/Views/Shared/_Layout.cshtml
@@ -32,11 +32,31 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/ShopCart/CartView">Cart</a>
                     </li>
+
+                    @{
+                        if (User.Identity.IsAuthenticated)
+                        {
+
+                            <li class="nav-item">
+                                <form method="post" asp-controller="Account" asp-action="Logout">
+                                    <input type="submit" value="Logout" />
+                                </form>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" href="/Account/Login">Login</a>
+                            </li>
+                            <li class="nav-item">
+
+                                <a class="nav-link" href="/Account/Register">Register</a>
+                            </li>
+                        }
+                    }
                 </ul>
-                <form class="form-inline mt-2 mt-md-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
+
+                
             </div>
         </nav>
     </header>
