Added SugnalR; Added detail view; added updated navigation; added lgos

--- a/SimpleWebShop/Views/Account/Login.cshtml
+++ b/SimpleWebShop/Views/Account/Login.cshtml
@@ -1,22 +1,19 @@
 ﻿@model LoginModel
-
-<h3>Login page</h3>
-<div class="row" mb-5>
-    <form asp-action="Login" method="post" class="form-horizontal">
-        <div class="form-group" style="width: auto">
-            <label asp-for="email"></label>
-            <div class="col-md-5">
-                <input asp-for="email" class="form-control" style="width: auto" />
-                <span asp-validation-for="email" class="text-danger"></span>
-            </div>
+<div class="login-page">
+    <form class="login-form-1" asp-action="Login">
+        <h3>Login</h3>
+        <input asp-for="email" type="text" class="form-control" placeholder="Your Email *" value="" />
+        <span asp-validation-for="email" class="text-danger"></span>
+        <div class="form-group">
+            <input asp-for="password" type="password" class="form-control" placeholder="Your Password *" value="" />
+            <span asp-validation-for="password" class="text-danger"></span>
         </div>
-        <div class="form-group" style="width: auto">
-            <label asp-for="password"></label>
-            <div class="col-md-5">
-                <input asp-for="password" class="form-control" style="width: auto" />
-                <span asp-validation-for="password" class="text-danger"></span>
-            </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary">Login</button>
+            <button class="btn btn-secondary" type="button" onClick="javascript:window.location.href='/account/register'">Register</button>
         </div>
-        <input class="btn-success" type="submit" value="Login" />
+        <div class="mt-2 mb-2" style="color: red">
+            @Html.ValidationMessage("error")
+        </div>
     </form>
 </div>
