--- a/SimpleWebShop/Views/Account/Register.cshtml
+++ b/SimpleWebShop/Views/Account/Register.cshtml
@@ -1,32 +1,27 @@
 ﻿@model RegisterModel
 
-<h3>Register page</h3>
-<div class="row" mb-5>
-    <form asp-action="Register" method="post" class="form-horizontal">
 
-        <div class="form-group" style="width: auto">
-            <label asp-for="name"></label>
-            <div class="col-md-5">
-                <input asp-for="name" class="form-control" style="width: auto" />
-                <span asp-validation-for="name" class="text-danger"></span>
-            </div>
+<div class="login-page">
+    <form class="login-form-1" asp-action="Register">
+        <h3>Register</h3>
+
+        <input asp-for="name" type="text" class="form-control" placeholder="Your name *" value="" />
+        <span asp-validation-for="name" class="text-danger"></span>
+
+        <input asp-for="email" type="text" class="form-control" placeholder="Your Email *" value="" />
+        <span asp-validation-for="email" class="text-danger"></span>
+
+
+        <div class="form-group">
+            <input asp-for="password" type="password" class="form-control" placeholder="Your Password *" value="" />
+            <span asp-validation-for="password" class="text-danger"></span>
         </div>
 
-        <div class="form-group" style="width: auto">
-            <label asp-for="email"></label>
-            <div class="col-md-5">
-                <input asp-for="email" class="form-control" style="width: auto" />
-                <span asp-validation-for="email" class="text-danger"></span>
-            </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary">Register</button>
         </div>
-
-        <div class="form-group" style="width: auto">
-            <label asp-for="password"></label>
-            <div class="col-md-5">
-                <input asp-for="password" class="form-control" style="width: auto" />
-                <span asp-validation-for="password" class="text-danger"></span>
-            </div>
+        <div class="mt-2 mb-2" style="color: red">
+            @Html.ValidationMessage("error")
         </div>
-        <input class="btn-success" type="submit" value="Register" />
     </form>
 </div>
