--- a/SimpleWebShop/Views/Shared/AllCars.cshtml
+++ b/SimpleWebShop/Views/Shared/AllCars.cshtml
@@ -7,5 +7,5 @@
     <h2>@Model.name</h2>
     <p>@Model.shortDescription</p>
     <p>Цена: @Model.price.ToString("c")</p>
-    <p><a class="btn btn-warning" asp-controller="ShopCart" asp-action="addToCart" asp-route-id="@Model.id">Добавить в корзину</a></p>
+    <p><a class="btn btn-warning" asp-controller="CarDetail" asp-action="CarView" asp-route-carID="@Model.id">About</a></p>
 </div>
