--- a/SimpleWebShop/Views/Shared/_Layout.cshtml
+++ b/SimpleWebShop/Views/Shared/_Layout.cshtml
@@ -4,7 +4,10 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/5.0.1/signalr.min.js"></script>
     <link href="~/css/main.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -21,9 +24,6 @@
                         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Cars/CarsView">All Cars</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="/Cars/CarsView/electro">Electro cars</a>
                     </li>
                     <li class="nav-item">
@@ -32,31 +32,20 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/ShopCart/CartView">Cart</a>
                     </li>
-
-                    @{
-                        if (User.Identity.IsAuthenticated)
-                        {
-
-                            <li class="nav-item">
-                                <form method="post" asp-controller="Account" asp-action="Logout">
-                                    <input type="submit" value="Logout" />
-                                </form>
-                            </li>
-                        }
-                        else
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link" href="/Account/Login">Login</a>
-                            </li>
-                            <li class="nav-item">
-
-                                <a class="nav-link" href="/Account/Register">Register</a>
-                            </li>
-                        }
-                    }
                 </ul>
-
-                
+                @{
+                    if (User.Identity.IsAuthenticated)
+                    {
+                            <form method="post" asp-controller="Account" asp-action="Logout">
+                                <button class="btn btn-danger" type="submit">Logout</button>
+                            </form>
+                    }
+                    else
+                    {
+                            <a class="nav-link" href="/Account/Login" style="color: #fff">Login</a>
+                            <a class="nav-link" href="/Account/Register" style="color: #fff">Register</a>
+                    }
+                }
             </div>
         </nav>
     </header>
@@ -69,6 +58,6 @@
         <p class="float-right"><a href="#">Back to top</a></p>
         <p>© 2020 Sergey Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
     </footer>
-
+    <script src="~/js/application.js"></script>
 </body>
 </html>
