--- a/SimpleWebShop/wwwroot/css/main.css
+++ b/SimpleWebShop/wwwroot/css/main.css
@@ -11,3 +11,32 @@
     width: 100%;
     max-height: 100%;
 }
+
+body {
+    font-family: "Lato", sans-serif;
+}
+
+.login-page {
+   width: 100%;
+   min-height: 100vh;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.login-form-1 {
+    max-width: 500px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 40px;
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 350px;
+}
+
+.login-form-1 h3 {
+    text-align: center;
+    color: #333;
+}
